Add direct publication links to publications.html
Added direct links to recent publications in the publications page.

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -11,6 +11,12 @@ author_profile: true
 
 {% include base_path %}
 
+<!-- Added direct publication links -->
+<ul>
+  <li>"Dark Matter and Collider Phenomenology in Triplet Extensions" – preprint (Nov 2025). <a href="https://arxiv.org">Link to appear</a></li>
+  <li>"Search for MeV gamma-ray emission from TeV bright red dwarfs with COMPTEL", JCAP 09 (2024) 029. <a href="https://arxiv.org/abs/2407.01060">arXiv:2407.01060</a></li>
+</ul>
+
 <!-- New style rendering if publication categories are defined -->
 {% if site.publication_category %}
   {% for category in site.publication_category  %}
@@ -31,6 +37,3 @@ author_profile: true
     {% include archive-single.html %}
   {% endfor %}
 {% endif %}
-
-
-
