Update research portfolio with new projects
Added multiple research projects to the portfolio section, detailing studies on dark matter, observational evidence, gamma-ray emissions, star clusters, and pulsar detection.

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -7,8 +7,22 @@ author_profile: true
 
 {% include base_path %}
 
+<h2>Research Portfolio</h2>
+<hr/>
 
-{% for post in site.portfolio %}
-  {% include archive-single.html %}
-{% endfor %}
+<h3>Dark Matter and Collider Phenomenology in Triplet Extensions (2025–Present)</h3>
+<p>Studying scalar and fermion triplet extensions of the Standard Model (Y = 2) to identify viable dark matter candidates. Work includes relic density calculations, direct/indirect detection studies, and collider signatures using tools such as SARAH, SPheno, MicrOmegas, MadGraph, and Python.</p>
+
+<h3>Observational Evidence of Evolving Dark Matter at z &lt; 1 using MAGPI Survey (2024–Present)</h3>
+<p>Analyzing rotation curves of star-forming galaxies at redshifts 0.2–0.5 using MAGPI survey data. Applied 3DBAROLO kinematic modeling, pressure gradient corrections, and MCMC fitting (emcee, scipy) to estimate dark matter halo radii, core densities, and baryonic components.</p>
+
+<h3>Search for MeV Gamma-ray Emission from TeV Bright Red Dwarfs with COMPTEL (2024)</h3>
+<p>Conducted a systematic search for 0.75–30 MeV gamma-ray emission using 9 years of COMPTEL archival data. Computed Test Statistics, generated TS maps, and produced SEDs to determine flux limits. Tools used include ctools, GammaLib, DS9, and FV.</p>
+
+<h3>Photometric and Kinematic Study of Star Clusters (2023)</h3>
+<p>Worked on open cluster Dolidze 25 to identify kinematic members using Gaia distance, proper motion, and parallax constraints. Performed photometric analysis through CMD construction and theoretical isochrone fitting.</p>
+
+<h3>Detection of Pulsars from Radio Data (2022–2023)</h3>
+<p>Processed radio telescope .fil data using PRESTO and RFIClean to identify periodic signals and dispersion measures. Applied FFT-based searches, RFI removal, and signal de-dispersion using data from GBT and Parkes.</p>
+
 
