--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -5,7 +5,6 @@ permalink: /projects/
 author_profile: true
 ---
 
-
 # Research Projects
 
 ---
@@ -13,10 +12,8 @@ author_profile: true
 ## Current Projects
 
 ### Dark Matter and Collider Phenomenology in Triplet Extensions of Standard Model
-**Master's Thesis** | May 2025 – Present  
+**Master's Thesis** | May 2024 – Present  
 **Supervisor:** Dr. Rahul Srivastava, Assistant Professor, IISER Bhopal
-
-
 
 #### Overview
 Investigating viable dark matter candidates in Beyond Standard Model (BSM) frameworks, specifically focusing on scalar and fermion triplet extensions of the Standard Model with hypercharge Y = 2. This work explores the intersection of particle physics and cosmology by examining how dark matter candidates manifest in both cosmological observations and high-energy collider experiments.
@@ -57,19 +54,11 @@ Manuscript in preparation, expected submission by March 2025
 
 ---
 
-
-
-
-
----
-
 ## Completed Projects
 
-### Observational Evidence of Evolving Dark Matter at z less than 1 using MAGPI Survey
+### Observational Evidence of Evolving Dark Matter at z < 1 using MAGPI Survey
 **Collaborative Research** | December 2024 – April 2025  
 **Supervisor:** Dr. Gauri Sharma, Postdoctoral Researcher, Observatoire Astronomique de Strasbourg, France
-
-
 
 #### Overview
 Investigating the evolution of dark matter halo properties in star-forming galaxies at intermediate redshifts (z = 0.2–0.5) using data from the Middle Ages Galaxy Properties with Integral Field Spectroscopy (MAGPI) survey. This project addresses fundamental questions about dark matter distribution and evolution across cosmic time.
@@ -121,11 +110,14 @@ The distribution of dark matter in galaxies provides crucial insights into galax
 #### Tools & Software
 Python (emcee, scipy, astropy.cosmology), 3D BAROLO, TOPCAT, SAOImage DS9
 
+#### Status
+Manuscript in preparation
+
+---
+
 ### Search for MeV Gamma-Ray Emission from TeV-Bright Red Dwarfs with COMPTEL
 **Summer Research Project** | May 2024 – July 2024  
 **Supervisor:** Dr. Shantanu Desai, Professor, Indian Institute of Technology Hyderabad
-
-
 
 #### Overview
 Conducted the first systematic search for soft gamma-ray emission (0.75–30 MeV) from eight TeV-bright red dwarfs previously detected by the SHALON atmospheric Cherenkov telescope. This work investigates whether these red dwarfs could be sources of ultra-high energy cosmic rays by searching for multi-wavelength gamma-ray signatures.
@@ -203,8 +195,6 @@ Presented at 33rd IAGRG Meeting, BITS Pilani, January 2025
 **Summer Internship** | July 2023 – September 2023  
 **Supervisor:** Dr. Neelam Panwar, Scientist-D, Aryabhatta Research Institute of Observational Sciences (ARIES), Nainital
 
-
-
 #### Overview
 Conducted comprehensive photometric and kinematic analysis of the open star cluster Dolidze 25, located near the Galactic plane. This project involved membership determination, distance estimation, and age determination using state-of-the-art astrometric data from Gaia DR3.
 
@@ -268,8 +258,6 @@ Comprehensive characterization of Dolidze 25, contributing to our understanding 
 ### Detection of Pulsars from Radio Data
 **Winter Project** | December 2022 – January 2023  
 **Supervisor:** Dr. Mayuresh Surnis, Assistant Professor, IISER Bhopal
-
-
 
 #### Overview
 Introduction to radio astronomy and pulsar detection techniques through hands-on analysis of real telescope data. This project provided foundational experience in signal processing, time-series analysis, and radio frequency interference (RFI) mitigation.
@@ -416,6 +404,10 @@ I am interested in pursuing research that addresses fundamental questions at the
 ## Collaborations
 
 I am always interested in collaborative research opportunities. If you're working on related topics or have ideas for collaboration, please feel free to reach out:
+
+📧 niharikas21@iiserb.ac.in  
+🌐 [https://niharikashri22.github.io](https://niharikashri22.github.io)  
+💼 [LinkedIn](https://www.linkedin.com/in/niharika-shrivastava-23203a226/)
 
 ---
 
