Update manuscript status in projects page
Removed expected submission date from manuscript status.

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -50,7 +50,7 @@ Investigating viable dark matter candidates in Beyond Standard Model (BSM) frame
 Python, SARAH, FeynRules, SPheno, MicrOMEGAs, MadGraph, Mathematica
 
 #### Status
-Manuscript in preparation, expected submission by March 2025
+Manuscript in preparation
 
 ---
 
