--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -56,7 +56,7 @@ Manuscript in preparation
 
 ## Completed Projects
 
-### Observational Evidence of Evolving Dark Matter at z < 1 using MAGPI Survey
+### Observational Evidence of Evolving Dark Matter at z less than 1 using MAGPI Survey
 **Collaborative Research** | December 2024 – April 2025  
 **Supervisor:** Dr. Gauri Sharma, Postdoctoral Researcher, Observatoire Astronomique de Strasbourg, France
 
