Fix link order and capitalization in resources.html

--- a/_pages/resources.html
+++ b/_pages/resources.html
@@ -42,17 +42,15 @@ Comprehensive analysis using COMPTEL archival data, including methodology and st
 <h3>Standard Model of Particle Physics Course Project</h3>
 <p><strong>Topic:</strong> [Matter Antimatter Asymmetry in the Universe]<br>
 Overview of the current theoretical knowledge on the subject</p>
-<p><a href="https://drive.google.com/file/d/1tiMI4hQjJH28iuIuJwVwc578lWAnjAXc/view?usp=drive_link" target="_blank"> Presentation</a> | <a href="https://drive.google.com/file/d/1a16BH7VNa_fbkGMYzIgV2BLjRcN7ap-c/view?usp=drive_link" target="_blank"> Report</a></p>
+<p><a href="https://drive.google.com/file/d/1tiMI4hQjJH28iuIuJwVwc578lWAnjAXc/view?usp=drive_link" target="_blank"> Report</a> | <a href="https://drive.google.com/file/d/1a16BH7VNa_fbkGMYzIgV2BLjRcN7ap-c/view?usp=drive_link" target="_blank"> Presentation</a></p>
 
 <h3>Data Science in Practice Project</h3>
 <p><strong>Topic:</strong> [Iris flower Classification]</p>
-<p><a href="https://drive.google.com/file/d/1KV7czsMHwiOtW_mgOXf4bAPoBWMjl7ch/view?usp=drive_link" target="_blank"> Presentation</a> | <a href="https://drive.google.com/file/d/1Xtu1Uj7FAVOq7wusuSR8g7-Q3J3rSVEI/view?usp=drive_link" target="_blank"> Report</a></p>
+<p><a href="https://drive.google.com/file/d/1KV7czsMHwiOtW_mgOXf4bAPoBWMjl7ch/view?usp=drive_link" target="_blank"> report</a> | <a href="https://drive.google.com/file/d/1Xtu1Uj7FAVOq7wusuSR8g7-Q3J3rSVEI/view?usp=drive_link" target="_blank"> Presentation</a></p>
 
 
 
 <hr>
-
-
 
 
 
