Revise detection experiments and collider search references
Updated detection experiments and collider searches in project details.

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -39,9 +39,9 @@ author_profile: true
 <li>Performed parameter space scans incorporating constraints from:
   <ul>
     <li>Relic density measurements (PLANCK)</li>
-    <li>Direct detection experiments (XENON, LUX)</li>
-    <li>Indirect detection (Fermi-LAT, IceCube)</li>
-    <li>Collider searches (LHC)</li>
+    <li>Direct detection experiments (XENON, LZ)</li>
+    <li>Indirect detection (Fermi-LAT, HESS)</li>
+    <li>Collider searches (LHC, CLIC)</li>
   </ul>
 </li>
 </ul>
@@ -144,8 +144,7 @@ author_profile: true
 <h4>Tools & Software</h4>
 <p>Python (emcee, scipy, astropy.cosmology), 3D BAROLO, TOPCAT, SAOImage DS9</p>
 
-<h4>Status</h4>
-<p>Manuscript in preparation</p>
+
 
 <hr>
 
